--- a/public/index.css
+++ b/public/index.css
@@ -7,9 +7,9 @@ body {
 
 main {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
-  align-content: flex-start;
+  flex-direction: column;
+  align-content: center;
 }
 
 h1 {
